# SlugEngine

./: .gitignore  .gitmodules  CLAUDE.md  SetupEngine.bat  SetupEnvironment.bat
engine/: .editorconfig  CMakeLists.txt
engine/bat/: BuildEngine.bat  MakeEngine.bat  RunTest.bat
engine/libs/: CMakeLists.txt
engine/libs/core/: CMakeLists.txt
engine/libs/core/include/core/: ClassReflection.hpp  Define.hpp  Function.hpp  NumericLimits.hpp  TypeConcept.hpp
engine/libs/core/include/core/color/: Color.hpp  ColorBase.hpp  ColorSpaceUtility.hpp  Spectrum.hpp
engine/libs/core/include/core/container/: Array.hpp  Bitset.hpp  Deque.hpp  EnumBitset.hpp  Iterator.hpp  List.hpp  Map.hpp  Pair.hpp  Queue.hpp  Span.hpp  Stack.hpp  StaticVector.hpp  String.hpp  UnorderedMap.hpp  UnorderedSet.hpp  Vector.hpp
engine/libs/core/include/core/debug/: Assert.hpp  CompileMessage.hpp  Exception.hpp  Logger.hpp
engine/libs/core/include/core/filesystem/: DefaultFileSystemController.hpp  FileMapping.hpp  FileSystem.hpp  IFileSystemController.hpp
engine/libs/core/include/core/io/: Path.hpp
engine/libs/core/include/core/memory/: Allocator.hpp  MemoryCounter.hpp  (+7 more)
engine/libs/core/src/: Define.cpp
engine/libs/core/src/color/: ColorSpaceUtility.cpp
engine/libs/core/src/debug/: Logger.cpp
engine/libs/core/src/filesystem/: DefaultFileSystemController.cpp  FileMapping.cpp  FileSystem.cpp
engine/libs/core/src/memory/: Allocator.cpp  MemoryCounter.cpp  MemoryLeakCheck.cpp  MemoryObject.cpp  MemoryUtilities.cpp
engine/libs/core/src/pack/: PackFile.cpp  PackUtility.cpp
engine/libs/core/src/reflection/: ReflectionClass.cpp
engine/libs/core/src/task/: Task.cpp  TaskSystem.cpp  WorkQueue.cpp
engine/libs/core/src/tick/: TickFunction.cpp  TickManager.cpp  TickObject.cpp
engine/libs/core/src/utility/: Hash.cpp
engine/libs/core/src/uuid/: NameID.cpp  UUID.cpp
engine/libs/core/src/window/: WindowUtility.cpp
engine/libs/engine/: CMakeLists.txt
engine/libs/engine/engine_core/: CMakeLists.txt
engine/libs/engine/engine_core/src/: ClassReflection.cpp
engine/libs/engine/engine_framework/: CMakeLists.txt
engine/libs/engine/engine_framework/src/: ApplicationBase.cpp
engine/libs/engine/engine_game/: CMakeLists.txt
engine/libs/engine/engine_game/src/: ClassReflection.cpp
engine/libs/engine/engine_graphics/: CMakeLists.txt
engine/libs/extensions/: CMakeLists.txt
engine/libs/extensions/image/: CMakeLists.txt
engine/libs/extensions/image/src/: ImageUtility.cpp
engine/libs/graphics/: CMakeLists.txt
engine/libs/graphics/render/: CMakeLists.txt
engine/libs/graphics/rhi/: CMakeLists.txt
engine/libs/graphics/shader/: CMakeLists.txt
engine/libs/math/: CMakeLists.txt
engine/libs/math/include/math/: AABB.hpp  Math.hpp  Matrix2x2.hpp  Matrix3x3.hpp  Matrix4x4.hpp  MatrixBase.hpp  Quaternion.hpp  Transform.hpp  TypeConcept.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
engine/libs/sgal/: CMakeLists.txt
engine/make/cmake/: Thirdparty.cmake  Utility.cmake
engine/samples/: CMakeLists.txt
engine/samples/reflection_sample/: CMakeLists.txt
engine/samples/reflection_sample/include/: Define.hpp
engine/samples/reflection_sample/src/: Main.cpp
engine/samples/rhi_sample/: CMakeLists.txt
engine/samples/rhi_sample/include/render/: GraphicsContext.hpp  IGrapchicsDevice.hpp  KeyInput.hpp  Window.hpp
engine/samples/rhi_sample/src/: GraphicsContext.cpp  GraphicsDeviceD3D12.cpp  Main.cpp  Window.cpp
engine/schema/flatbuffers/: GenerateCode.bat
engine/schema/flatbuffers/cpp/srtf/: CMakeLists.txt
engine/schema/flatbuffers/csharp/srtf/: srtf.csproj  srtf.sln
engine/schema/flatbuffers/fbs/srtf/: Common.fbs  Materials.fbs  Model.fbs  Shader.fbs  Texture.fbs
engine/schema/slugbuffers/: GenerateSchema.bat
engine/schema/slugbuffers/schema/: slug_schema.xml
engine/tests/: CMakeLists.txt
engine/tests/core/: CMakeLists.txt  Main.cpp
engine/tests/core/color/: Color.cpp
engine/tests/core/container/: String.cpp
engine/tests/core/debug/: Assert.cpp  Logger.cpp
engine/tests/core/math/: Math.cpp  Matrix2x2.cpp  Matrix3x3.cpp  Matrix4x4.cpp  Quaternion.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
engine/tests/core/memory/: ReferenceObject.cpp  WeakReferenceObject.cpp
engine/tests/core/serialize/: Serialize.cpp
engine/tests/core/serialize/archiver/: ArchiverSerializeClass.hpp  BinaryArchiverSerialize.cpp  JsonArchiverSerialize.cpp
engine/tests/core/service/: ServiceProvider.cpp
engine/tests/core/task/: TaskSystem.cpp
engine/tests/core/tick/: Tick.cpp
engine/tests/engine_core/: CMakeLists.txt
engine/tests/engine_core/src/: Main.cpp
engine/tests/workflow/: CMakeLists.txt
engine/tests/workflow/include/worlflow_test/: Application.hpp
engine/tests/workflow/src/: Application.cpp  Main.cpp
engine/tools/: SetupTools.bat
engine/tools/SlugBuffers/: BuildTools.bat  SlugBuffers.sln
engine/tools/SlugBuffers/SbClangLib/: SbClangLib.csproj  SchemaGenerator.cs
engine/tools/SlugBuffers/SbGenerator/: CommandOptions.cs  CppParser.cs  EnumerateFiles.cs  Program.cs  SbGenerator.csproj
engine/tools/SlugBuffers/SbGeneratorLib/: SbGeneratorLib.csproj
engine/tools/SlugBuffers/SbGeneratorLib/Cpp/: CodeGenerator.cs  Definition.cs  ReflectionGenerator.cs
engine/tools/SlugBuffers/SbGeneratorLib/Xml/: XmlGenerator.cs
engine/tools/SlugBuffers/SbReflectionLib/: SbReflectionLib.csproj
engine/tools/SlugBuffers/SbReflectionLib/Reflections/: AliasReflection.cs  ClassReflection.cs  EnumReflection.cs  FieldReflection.cs  ReflectionBuilder.cs
(+346 files in other folders)
